docs: Swagger for track methods
