# internal/handlers/track/read_all.go
@@ -9,18 +9,38 @@ import (
 	"net/http"
 )
 
+// readAllResponseItem godoc
+// @Description Single track item structure in the response of ReadAll endpoint.
+// @Property TrackId (int) Unique ID of the track.
+// @Property CoverId (int, optional) Optional ID of the cover associated with the track.
+// @Property DurationMs (int64) Duration of the track in milliseconds.
+// @Property AudioCodec (string) Codec used for the audio track (e.g., "mp3", "flac").
+// @Property Size (int64) Size of the track file in bytes.
+// @Property HashSha256 (string) SHA-256 hash of the track file for integrity verification.
 type readAllResponseItem struct {
 	TrackId    int    `json:"trackId"`
 	CoverId    *int   `json:"coverId,omitempty"`
-	AudioCodec string `json:"AudioCodec"`
+	DurationMs int64  `json:"durationMs"`
+	AudioCodec string `json:"audioCodec"`
 	Size       int64  `json:"size"`
 	HashSha256 string `json:"hashSha256"`
 }
 
+// readAllResponse godoc
+// @Description Response structure containing details of all tracks.
+// @Property Tracks (array of readAllResponseItem) Array containing details of all tracks.
 type readAllResponse struct {
 	Tracks []readAllResponseItem `json:"tracks"`
 }
 
+// ReadAll godoc
+// @Summary Retrieve all tracks
+// @Tags Tracks
+// @Accept json
+// @Produce json
+// @Success 200 {object} readAllResponse "Successfully retrieved all tracks"
+// @Failure 500 {object} types.ErrorResponse "Failed to fetch all tracks"
+// @Router /tracks [get]
 func (h *Handler) ReadAll(c *gin.Context) {
 	log.Debug().Msg("Fetching all tracks")
 
@@ -46,6 +66,7 @@ func (h *Handler) ReadAll(c *gin.Context) {
 		trackResponse := readAllResponseItem{
 			TrackId:    track.TrackId,
 			CoverId:    track.CoverId,
+			DurationMs: track.DurationMs,
 			AudioCodec: track.AudioCodec,
 			Size:       track.Size,
 			HashSha256: track.HashSha256,
